Fix z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@ custom-header {
     background-image: linear-gradient(to right, #2065b9 0%, #55afe8 100%);
     padding: 20px;
     position: fixed!important;
+    z-index: 2;
 }
 
 html, body {
